add styles and functions for catamaran stack

--- a/ecoleinfographie/resources/assets/stylus/settings/fonts.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/fonts.styl
@@ -2,5 +2,121 @@
 * by Jimmy Letecheur
 */
 
-oxygenfonts = Oxygen, Helvetica, Arial, sans-serif;
+CatamaranStack = Catamaran, Helvetica, Arial, sans-serif;
+Catamaran($weight, $lh, $sz, $sp)
+  font-family CatamaranStack
+  font-size s($sz, $sp)
+  font-weight $weight
+  line-height $lh
 
+
+/************************************\
+CATAMARAN FONTS
+\************************************/
+// THIN
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-thin.eot');
+  src: url('catamaran-thin.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-thin.woff2') format('woff2'),
+          url('catamaran-thin.woff') format('woff'),
+          url('catamaran-thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+// EXTRA LIGHT
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-extralight.eot');
+  src: url('catamaran-extralight.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-extralight.woff2') format('woff2'),
+          url('catamaran-extralight.woff') format('woff'),
+          url('catamaran-extralight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+
+// LIGHT
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-light.eot');
+  src: url('catamaran-light.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-light.woff2') format('woff2'),
+          url('catamaran-light.woff') format('woff'),
+          url('catamaran-light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+// REGULAR
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-regular.eot');
+  src: url('catamaran-regular.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-regular.woff2') format('woff2'),
+          url('catamaran-regular.woff') format('woff'),
+          url('catamaran-regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+// MEDIUM
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-medium.eot');
+  src: url('catamaran-medium.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-medium.woff2') format('woff2'),
+          url('catamaran-medium.woff') format('woff'),
+          url('catamaran-medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+// SEMI-BOLD
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-semibold.eot');
+  src: url('catamaran-semibold.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-semibold.woff2') format('woff2'),
+          url('catamaran-semibold.woff') format('woff'),
+          url('catamaran-semibold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+// BOLD
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-bold.eot');
+  src: url('catamaran-bold.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-bold.woff2') format('woff2'),
+          url('catamaran-bold.woff') format('woff'),
+          url('catamaran-bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+// EXTRA-BOLD
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-extrabold.eot');
+  src: url('catamaran-extrabold.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-extrabold.woff2') format('woff2'),
+          url('catamaran-extrabold.woff') format('woff'),
+          url('catamaran-extrabold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+// BLACK
+@font-face {
+  font-family: 'Catamaran';
+  src: url('catamaran-black.eot');
+  src: url('catamaran-black.eot?#iefix') format('embedded-opentype'),
+          url('catamaran-black.woff2') format('woff2'),
+          url('catamaran-black.woff') format('woff'),
+          url('catamaran-black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
