update function Catamaran() font stack

--- a/ecoleinfographie/resources/assets/stylus/settings/fonts.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/fonts.styl
@@ -3,7 +3,7 @@
 */
 
 CatamaranStack = Catamaran, Helvetica, Arial, sans-serif;
-Catamaran($weight, $lh, $sz, $sp)
+Catamaran($sz, $sp, $weight, $lh)
   font-family CatamaranStack
   font-size s($sz, $sp)
   font-weight $weight
