init header styl and template

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -1,3 +1,7 @@
+// Load generic
+@import "generic/reset_meyer.styl"
+@import "generic/reset_flexbox.styl"
+
 // Load config & var
 @import "settings/global.styl"
 @import "settings/easing.styl"
@@ -23,10 +27,10 @@
 @import "base/base.styl"
 
 // Objects
-// --- nothing here (yet)
+@import "objects/header.styl"
 
 // Components
-// --- nothing here (yet)
+@import "components/header.styl"
 
 // Trumps
 // --- nothing here (yet)
