--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -3,13 +3,12 @@ html
 
 html *
   box-sizing border-box
-  font-size 20px
-  font-family sourcesansprofonts
+  font-size 16px
+  font-family CatamaranStack
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing antialiased
   -moz-osx-font-smoothing: grayscale
-  color color-black
-  line-height: 1.4
+  color $text-greyblue
   
   /*background-image url("../images/grid.png")
   background-repeat repeat-y
@@ -32,9 +31,3 @@ img
   max-width 100%
   height auto
 
-strong
-b
-  font-weight: bold
-
-p
-  color red
