--- a/ecoleinfographie/resources/assets/stylus/settings/fonts.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/fonts.styl
@@ -16,11 +16,11 @@ CATAMARAN FONTS
 // THIN
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-thin.eot');
-  src: url('catamaran-thin.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-thin.woff2') format('woff2'),
-          url('catamaran-thin.woff') format('woff'),
-          url('catamaran-thin.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-thin.eot');
+  src: url('../fonts/catamaran/catamaran-thin.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-thin.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-thin.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
 }
@@ -28,11 +28,11 @@ CATAMARAN FONTS
 // EXTRA LIGHT
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-extralight.eot');
-  src: url('catamaran-extralight.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-extralight.woff2') format('woff2'),
-          url('catamaran-extralight.woff') format('woff'),
-          url('catamaran-extralight.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-extralight.eot');
+  src: url('../fonts/catamaran/catamaran-extralight.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-extralight.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-extralight.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-extralight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
 }
@@ -40,11 +40,11 @@ CATAMARAN FONTS
 // LIGHT
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-light.eot');
-  src: url('catamaran-light.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-light.woff2') format('woff2'),
-          url('catamaran-light.woff') format('woff'),
-          url('catamaran-light.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-light.eot');
+  src: url('../fonts/catamaran/catamaran-light.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-light.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-light.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
@@ -52,11 +52,11 @@ CATAMARAN FONTS
 // REGULAR
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-regular.eot');
-  src: url('catamaran-regular.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-regular.woff2') format('woff2'),
-          url('catamaran-regular.woff') format('woff'),
-          url('catamaran-regular.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-regular.eot');
+  src: url('../fonts/catamaran/catamaran-regular.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-regular.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-regular.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
@@ -64,11 +64,11 @@ CATAMARAN FONTS
 // MEDIUM
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-medium.eot');
-  src: url('catamaran-medium.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-medium.woff2') format('woff2'),
-          url('catamaran-medium.woff') format('woff'),
-          url('catamaran-medium.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-medium.eot');
+  src: url('../fonts/catamaran/catamaran-medium.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-medium.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-medium.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
@@ -76,11 +76,11 @@ CATAMARAN FONTS
 // SEMI-BOLD
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-semibold.eot');
-  src: url('catamaran-semibold.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-semibold.woff2') format('woff2'),
-          url('catamaran-semibold.woff') format('woff'),
-          url('catamaran-semibold.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-semibold.eot');
+  src: url('../fonts/catamaran/catamaran-semibold.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-semibold.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-semibold.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-semibold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
@@ -88,11 +88,11 @@ CATAMARAN FONTS
 // BOLD
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-bold.eot');
-  src: url('catamaran-bold.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-bold.woff2') format('woff2'),
-          url('catamaran-bold.woff') format('woff'),
-          url('catamaran-bold.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-bold.eot');
+  src: url('../fonts/catamaran/catamaran-bold.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-bold.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-bold.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
@@ -100,11 +100,11 @@ CATAMARAN FONTS
 // EXTRA-BOLD
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-extrabold.eot');
-  src: url('catamaran-extrabold.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-extrabold.woff2') format('woff2'),
-          url('catamaran-extrabold.woff') format('woff'),
-          url('catamaran-extrabold.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-extrabold.eot');
+  src: url('../fonts/catamaran/catamaran-extrabold.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-extrabold.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-extrabold.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-extrabold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
@@ -112,11 +112,11 @@ CATAMARAN FONTS
 // BLACK
 @font-face {
   font-family: 'Catamaran';
-  src: url('catamaran-black.eot');
-  src: url('catamaran-black.eot?#iefix') format('embedded-opentype'),
-          url('catamaran-black.woff2') format('woff2'),
-          url('catamaran-black.woff') format('woff'),
-          url('catamaran-black.ttf') format('truetype');
+  src: url('../fonts/catamaran/catamaran-black.eot');
+  src: url('../fonts/catamaran/catamaran-black.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/catamaran/catamaran-black.woff2') format('woff2'),
+          url('../fonts/catamaran/catamaran-black.woff') format('woff'),
+          url('../fonts/catamaran/catamaran-black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
