Create style for card metiers

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -8,6 +8,7 @@
 @import "settings/icons.styl"
 @import "settings/colors";
 @import "settings/fonts";
+@import "settings/sizes.styl"
 
 // Load mixins & functions
 @import "core/utils.styl"
