--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -8,7 +8,7 @@ html *
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing antialiased
   -moz-osx-font-smoothing: grayscale
-  color $text-greyblue
+  color $cText-greyblue
   
   /*background-image url("../images/grid.png")
   background-repeat repeat-y
