--- a/ecoleinfographie/resources/assets/stylus/objects/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/objects/header.styl
@@ -1,3 +1,12 @@
 .accueil
   .header-shawl
     min-height s(700,16)
+    padding s(35, 16) 0 0 0
+  .header
+    &__wrapper
+      max-width s(1170, 16)
+      margin 0 auto
+      clearfix(both)
+    & .nav
+      float: right
+
