--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -1,4 +1,20 @@
 /* colors style
 * by Jimmy Letecheur
 */
-$text-greyblue = #566273
+
+$cWhite = #FFF
+
+$cBlack = #353D47
+
+$cBlueWeb = #004A8C
+$cPinkDG = #D81B60
+$cGreen3D = #00796B
+
+$cBlueCiel = #136A8A
+
+$cGrey-lineMenu = #D5D5D9
+$cText-greyblue = #566273
+
+
+
+
