animation metier card menu

--- a/ecoleinfographie/resources/assets/stylus/objects/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/objects/header.styl
@@ -1,7 +1,7 @@
 .accueil
   .header-shawl
     min-height s(700,16)
-    padding s(35, 16) 0 0 0
+    padding s(35, 16) s(40,16) 0 s(40,16)
   .header
     &__wrapper
       max-width s(1170, 16)
