--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -10,6 +10,7 @@ $cBlueWeb = #004A8C
 $cPinkDG = #D81B60
 $cGreen3D = #00796B
 
+$cBlueGreyLight = #F5F5FA
 $cBlueCiel = #136A8A
 
 $cGrey-lineMenu = #D5D5D9
