--- a/ecoleinfographie/resources/assets/stylus/settings/fonts.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/fonts.styl
@@ -120,3 +120,19 @@ CATAMARAN FONTS
   font-weight: 900;
   font-style: normal;
 }
+
+
+/************************************\
+  ICONS FONT
+\************************************/
+
+@font-face {
+  font-family: 'icons';
+  src:  url('../fonts/icons/icons.eot?rx4py8');
+  src:  url('../fonts/icons/icons.eot?rx4py8#iefix') format('embedded-opentype'),
+          url('../fonts/icons/icons.ttf?rx4py8') format('truetype'),
+          url('../fonts/icons/icons.woff?rx4py8') format('woff'),
+          url('../fonts/icons/icons.svg?rx4py8#icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
