--- a/ecoleinfographie/resources/assets/stylus/settings/global.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/global.styl
@@ -15,7 +15,7 @@ $ws_sprite-layout = vertical                      //    Sass sprite rendering. C
 $ws_sprite-spacing = 2px                          //    Only works for $ws_sprite-layout = [vertical|horizontal] !
 
 // ICONS
-$ws_icon-font-family = "FontAwesome"         //    Font-family name of the icon-font
+$ws_icon-font-family = "icons"         //    Font-family name of the icon-font
 
 
 
