--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -1,3 +1,42 @@
-$ws_icon-list =       "iconName1"   "\f105",
-                      "iconName2"   "\f0a9",
-                      "iconName3"   "\e820"
+$ws_icon-list =       "arrow-left"   "\e900",
+                      "arrow-page"   "\e901",
+                      "arrow-right"   "\e902",
+                      "attention"   "\e903",
+                      "attention2"   "\e904",
+                      "behance"   "\e905",
+                      "blog"   "\e906",
+                      "building"   "\e907",
+                      "bullet"   "\e908",
+                      "checked"   "\e909",
+                      "chevron-right"   "\e90a",
+                      "chevron-right2"   "\e90b",
+                      "clock"   "\e90c",
+                      "dribble"   "\e90d",
+                      "ecology"   "\e90e",
+                      "effective"   "\e90f",
+                      "extensible"   "\e910",
+                      "facebook"   "\e911",
+                      "glass"   "\e912",
+                      "hat"   "\e913",
+                      "heart"   "\e914",
+                      "hourglass"   "\e915",
+                      "house"   "\e916",
+                      "information"   "\e917",
+                      "location"   "\e918",
+                      "mail"   "\e919",
+                      "men"   "\e91a",
+                      "performance"   "\e91b",
+                      "phone"   "\e91c",
+                      "pinterest"   "\e91d",
+                      "pleasant"   "\e91e",
+                      "response"   "\e91f",
+                      "safe"   "\e920",
+                      "teacher"   "\e921",
+                      "triangle-double"   "\e922",
+                      "triangle"   "\e923",
+                      "twitter"   "\e924",
+                      "world"   "\e925",
+                      "world2"   "\e926"
+
+
+
