init modernizr and code&style header

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -31,6 +31,7 @@
 @import "objects/header.styl"
 
 // Components
+@import "components/navigation.styl"
 @import "components/header.styl"
 
 // Trumps
