--- a/ecoleinfographie/resources/assets/stylus/objects/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/objects/header.styl
@@ -3,6 +3,7 @@
     min-height s(700,16)
     padding s(35, 16) s(40,16) 0 s(40,16)
   .header
+    position: relative
     &__wrapper
       max-width s(1170, 16)
       margin 0 auto
