correct bug safari background clip

--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -5,28 +5,32 @@
     position: absolute
     left: 0
     right: 0
-    top: 50%
+    top 0
     height: 100%;
-    padding-top: s(260, 16)
-    display: inline-block
     margin-left: auto
     margin-right: auto
     text-align: center
-    transform: translateY(-50%)
-    background url("../img/header-home-background.jpg") no-repeat center center/cover
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    filter: brightness(1.3);
     &__strong
     &__small
-      color $cWhite
+      position: absolute
+      left: 0
+      right: 0
       display block
+      height: 100%;
       Catamaran($text-XXXXL, 16, 700, 1.1)
+      background url("../img/header-home-background.jpg") no-repeat center center/cover
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      transform translateZ(0)
+      filter: brightness(1.5);
     &__strong
+      padding-top 250px
       margin-bottom s(30, 64.85)
       letter-spacing 2px
     &__small
       font-weight 400
+      padding-top 350px
       font-size s($text-XL = 26.56, 16)
       text-transform: uppercase
       letter-spacing 2px
@@ -55,7 +59,8 @@
       transition-property opacity, transform
 
 .no-backgroundcliptext
-  .header-shawl__title
+  .header-shawl__title__strong
+  .header-shawl__title__small
     background none
     color $cWhite
     filter none
