code html introduction and style header shawl

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -33,6 +33,9 @@
 // Components
 @import "components/navigation.styl"
 @import "components/header.styl"
+@import "components/global.styl"
+//// HOME
+@import "components/home/intro.styl"
 
 // Trumps
 // --- nothing here (yet)
